z-index fix

--- a/src/style/_MediaCourses.scss
+++ b/src/style/_MediaCourses.scss
@@ -9,6 +9,7 @@
     position: sticky;
     top: 60px;
     background: #fff;
+    z-index: 1;
   }
 
   .general-day-box-container {
