--- a/src/style/_MediaMenu.scss
+++ b/src/style/_MediaMenu.scss
@@ -48,6 +48,7 @@
   .dropDownShow {
     max-height: 100vh;
     overflow-y: scroll;
+    z-index: 3;
   }
 }
 
